Bug 1779036 - Account for the fact that the ended promise might already have been resolved in GetPosition, during shutdown. r=ng, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D151592